# chachachatbot

./: README.md  auto_chat.py  chat.py  main.py  pyproject.toml  setup.py  streamlit_app.py
app/: common.py  gemini_generator.py  response_generator.py
app/guard/: __init__.py  qwen3_guard.py
app/phases/: explore.py  find.py  help.py  label.py  record.py  share.py  tutor.py
backend/: server.py
backend/routers/: chat.py
chatlib/: pyproject.toml
chatlib/chatlib/llm/integration/: gemini_api.py
chatlib/llm/integration/: gemini_api.py
frontend/: package.json
frontend/src/script/: App.tsx  types.ts
frontend/src/script/app/chat/: reducer.ts
frontend/src/script/app/chat/components/: TutorBadge.tsx  TutorQuestCard.tsx
frontend/src/script/app/chat/pages/: ChatPage.tsx
frontend/src/script/app/tutor-game/: storage.ts
frontend/src/script/app/tutor-game/pages/: TutorGamePage.tsx
